fix: Fix some lines were not correctly parsed